migration-result/ver/13.x/server-access/guides/ansible.mdx
---
title: Ansible
description: Using Teleport with Ansible
version: '13.x'
---

Ansible uses the OpenSSH client by default. Teleport supports SSH protocol and
works as SSH jumphost.

In this guide we will configure OpenSSH client to work with Teleport Proxy
and run a sample ansible playbook.

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- `ssh` openssh tool
- `ansible` >= 2.9.6
- Optional tool `jq` to process `JSON` output.
- Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
  remotely:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  13.2.0
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  You can run subsequent `tctl` commands in this guide on your local machine.

  For full privileges, you can also run `tctl` commands on your Auth Service host.
  ```code
  $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
  $ tctl status
  # Cluster  myinstance.teleport.sh
  # Version  13.2.0
  # CA pin   sha256:sha-hash-here
  ```
  You must run subsequent `tctl` commands in this guide on your local machine.

## Step 1/3. Login and configure SSH

Log into Teleport with `tsh`:

```code
$ tsh login --proxy=example.com
```

Generate `openssh` configuration using `tsh config` shortcut:

```code
$ tsh config > ssh.cfg
```

<Tip>
  You can edit matching patterns used in `ssh.cfg` if something
  is not working out of the box.
</Tip>

## Step 2/3. Configure Ansible

Create a folder `ansible` where we will collect all generated files:

```code
$ mkdir -p ansible
$ cd ansible
```

Create a file `ansible.cfg`:

```
[defaults]
host_key_checking = True
inventory=./hosts
remote_tmp=/tmp

[ssh_connection]
scp_if_ssh = True
ssh_args = -F ./ssh.cfg
```

You can create an inventory file `hosts` manually or use a script below to generate it from your environment. Set your
cluster name (e.g. `teleport.example.com` or in the form `mytenant.teleport.sh` for Teleport Enterprise Cloud)
and this script will generate the host names to match the `openssh` configuration:

```code
$ tsh ls --format=json | jq '.[].spec.hostname + ".teleport.example.com"' > hosts
```

## Step 3/3. Run a playbook

Finally, let's create a simple ansible playbook `playbook.yaml`.

The playbook below runs `hostname` on all hosts. Make sure to set the `remote_user` parameter
to a valid SSH username that works with the target host and is allowed by Teleport:

```yaml
- hosts: all
  remote_user: ubuntu
  tasks:
    - name: "hostname"
      command: "hostname"
```

From the folder `ansible`, run the ansible playbook:

```code
$ ansible-playbook playbook.yaml 

# PLAY [all] *****************************************************************************************************************************************
# TASK [Gathering Facts] *****************************************************************************************************************************
#
# ok: [terminal]
#
# TASK [hostname] ************************************************************************************************************************************
# changed: [terminal]
#
# PLAY RECAP *****************************************************************************************************************************************
# terminal                   : ok=2    changed=1    unreachable=0    failed=0    skipped=0    rescued=0    ignored=0
```

You are all set. You are now using short-lived SSH certificates and Teleport can now record
all ansible commands in the audit log.

## Troubleshooting

In case if ansible can not connect, you may see error like this one:

```txt
example.host | UNREACHABLE! => {
    "changed": false,
    "msg": "Failed to connect to the host via ssh: ssh: Could not resolve hostname example.host: Name or service not known",
    "unreachable": true
}
```

You can examine and tweak patterns matching the inventory hosts in `ssh.cfg`.

Try the SSH connection using `ssh.cfg` with verbose mode to inspect the error:

```code
$ ssh -vvv -F ./ssh.cfg root@example.host
```

If `ssh` works, try running the playbook with verbose mode on:

```code
$ ansible-playbook -vvvv playbook.yaml
```
